--- a/without_devise/Gemfile
+++ b/without_devise/Gemfile
@@ -38,5 +38,6 @@ gem 'spring',        group: :development
 
 gem "mongoid", "4.0.0"
 gem "omniauth-weibo-oauth2"
+gem 'omniauth-qq'
 gem "figaro"
 gem "haml"
