--- a/without_devise/Gemfile
+++ b/without_devise/Gemfile
@@ -38,6 +38,7 @@ gem 'spring',        group: :development
 
 gem "mongoid", "4.0.0"
 gem "omniauth-weibo-oauth2"
-gem 'omniauth-qq'
+gem "omniauth-qq"
+gem "omniauth-github"
 gem "figaro"
 gem "haml"
