--- a/with_devise/Gemfile
+++ b/with_devise/Gemfile
@@ -37,3 +37,4 @@ gem 'spring',        group: :development
 # gem 'debugger', group: [:development, :test]
 gem "mongoid", "4.0.0"
 gem "figaro"
+gem 'devise'
