--- a/with_devise/Gemfile
+++ b/with_devise/Gemfile
@@ -38,3 +38,6 @@ gem 'spring',        group: :development
 gem "mongoid", "4.0.0"
 gem "figaro"
 gem 'devise'
+gem "omniauth-weibo-oauth2"
+gem "omniauth-qq"
+gem "omniauth-github"
